--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link rel="stylesheet" href="./index.css" />
+    <title>JajoMeals by Jafarzar</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -41,4 +42,8 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <footer class="copyright">
+    Built by @jafarzar for educational purposes. Concepts and ideas were created
+    by the trainers from the courses I studied.
+  </footer>
 </html>
